WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
91486
A shadow element in ShadowDOM of a button element does not work.
https://bugs.webkit.org/show_bug.cgi?id=91486
Summary
A shadow element in ShadowDOM of a button element does not work.
Shinya Kawanaka
Reported
2012-07-17 03:59:38 PDT
When we add an AuthorShadowDOM to button element, it should be rendered correctly.
Attachments
WIP
(15.63 KB, patch)
2012-08-14 19:50 PDT
,
Shinya Kawanaka
no flags
Details
Formatted Diff
Diff
Patch
(4.59 KB, patch)
2012-08-20 21:43 PDT
,
Shinya Kawanaka
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from gce-cr-linux-07
(312.57 KB, application/zip)
2012-08-20 22:35 PDT
,
WebKit Review Bot
no flags
Details
Patch
(6.48 KB, patch)
2012-08-21 05:01 PDT
,
Shinya Kawanaka
no flags
Details
Formatted Diff
Diff
Patch for landing
(6.45 KB, patch)
2012-08-21 17:40 PDT
,
Shinya Kawanaka
no flags
Details
Formatted Diff
Diff
Show Obsolete
(3)
View All
Add attachment
proposed patch, testcase, etc.
Shinya Kawanaka
Comment 1
2012-08-14 19:50:34 PDT
Created
attachment 158485
[details]
WIP
WebKit Review Bot
Comment 2
2012-08-14 20:26:14 PDT
Attachment 158485
[details]
did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'LayoutTests/ChangeLog', u'LayoutTests/fast..." exit_code: 1 Source/WebCore/html/HTMLButtonElement.cpp:48: The parameter name "document" adds no information, so it should be removed. [readability/parameter_name] [5] Total errors found: 1 in 12 files If any of these errors are false positives, please file a bug against check-webkit-style.
WebKit Review Bot
Comment 3
2012-08-14 20:31:40 PDT
Comment on
attachment 158485
[details]
WIP
Attachment 158485
[details]
did not pass chromium-ews (chromium-xvfb): Output:
http://queues.webkit.org/results/13510024
Build Bot
Comment 4
2012-08-14 20:47:31 PDT
Comment on
attachment 158485
[details]
WIP
Attachment 158485
[details]
did not pass mac-ews (mac): Output:
http://queues.webkit.org/results/13501489
Gyuyoung Kim
Comment 5
2012-08-14 20:59:49 PDT
Comment on
attachment 158485
[details]
WIP
Attachment 158485
[details]
did not pass efl-ews (efl): Output:
http://queues.webkit.org/results/13490869
Early Warning System Bot
Comment 6
2012-08-14 21:12:14 PDT
Comment on
attachment 158485
[details]
WIP
Attachment 158485
[details]
did not pass qt-ews (qt): Output:
http://queues.webkit.org/results/13510037
Early Warning System Bot
Comment 7
2012-08-14 21:29:26 PDT
Comment on
attachment 158485
[details]
WIP
Attachment 158485
[details]
did not pass qt-wk2-ews (qt): Output:
http://queues.webkit.org/results/13503500
Shinya Kawanaka
Comment 8
2012-08-20 21:43:04 PDT
Created
attachment 159617
[details]
Patch
WebKit Review Bot
Comment 9
2012-08-20 22:35:15 PDT
Comment on
attachment 159617
[details]
Patch
Attachment 159617
[details]
did not pass chromium-ews (chromium-xvfb): Output:
http://queues.webkit.org/results/13546274
New failing tests: fast/dom/shadow/shadowdom-for-form-associated-element-useragent.html
WebKit Review Bot
Comment 10
2012-08-20 22:35:19 PDT
Created
attachment 159623
[details]
Archive of layout-test-results from gce-cr-linux-07 The attached test failures were seen while running run-webkit-tests on the chromium-ews. Bot: gce-cr-linux-07 Port: <class 'webkitpy.common.config.ports.ChromiumXVFBPort'> Platform: Linux-2.6.39-gcg-201203291735-x86_64-with-Ubuntu-10.04-lucid
Shinya Kawanaka
Comment 11
2012-08-21 05:01:05 PDT
Created
attachment 159660
[details]
Patch
Dimitri Glazkov (Google)
Comment 12
2012-08-21 11:46:28 PDT
Comment on
attachment 159660
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=159660&action=review
> Source/WebCore/ChangeLog:10 > + So we have to prevent from creating UserAgentShadowDOM.
... prevent it from ...
Shinya Kawanaka
Comment 13
2012-08-21 17:40:14 PDT
Created
attachment 159816
[details]
Patch for landing
WebKit Review Bot
Comment 14
2012-08-21 18:46:57 PDT
Comment on
attachment 159816
[details]
Patch for landing Clearing flags on attachment: 159816 Committed
r126248
: <
http://trac.webkit.org/changeset/126248
>
WebKit Review Bot
Comment 15
2012-08-21 18:47:01 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug