Source/WebCore/html/HTMLButtonElement.h
@@ -47,6 +47,8 @@ private:
         
     virtual RenderObject* createRenderer(RenderArena*, RenderStyle*);
 
+    virtual void willAddAuthorShadowRoot() OVERRIDE;
+
     virtual void parseAttribute(const Attribute&) OVERRIDE;
     virtual bool isPresentationAttribute(const QualifiedName&) const OVERRIDE;
     virtual void defaultEventHandler(Event*);
